* Change log
** [Unrealeased] [2016-11-11]
*** Changed
- Changed the user name and password in dev.exs by Andrew